apps/production/sudoku/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sudoku
  namespace: sudoku
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sudoku
  template:
    metadata:
      labels:
        app: sudoku
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/master
                    operator: DoesNotExist
      containers:
        - name: sudoku
          image: turtlez/sudoku:main_20260526043732_16af2386 # {"$imagepolicy": "flux-system:sudoku"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
