apps/production/sudoku/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku
  namespace: sudoku
spec:
  selector:
    app: sudoku
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
